--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <script src="./src/index.js"></script>
+    <script src="./src/scenes/PlayScene.js"></script>
     <style>
       body {
         padding: 200px;
