--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <title>Multiplayer Flappy Bird</title>
+    <script type="text/javascript" src="./src/index.js"></script>
     <style>
       body {
         padding: 200px;
@@ -9,6 +11,7 @@
     </style>
   </head>
   <body>
+    <div>Scan me to play! Use the 'up' key on your controller to play!</div>
     <div id="qrcode"></div>
 
 
