--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Multiplayer Flappy Bird</title>
-    <script type="modules" src="./src/index.js"></script>
+    <script type="module" src="./src/index.js"></script>
     <style>
       body {
         padding: 200px;
