added assets to docs

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </style>
   </head>
   <body>
-    <div>Scan me to play! Use the 'up' key on your controller to play!</div>
+    <div>Scan me to play! Use the 'A' key on your controller to play!</div>
     <div id="qrcode"></div>
 
 
