final game tweak on game start

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </style>
   </head>
   <body>
+    <div id="game"></div>
     <div>Scan me to play! Use the 'A' key on your controller to play!</div>
     <div id="qrcode"></div>
 
