--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div id="game"></div>
-    <div>Scan me to play! Use the 'A' key on your controller to play!</div>
+    <div>Click the play button and then scan the QRCode to start playing! Max: three players.</div>
     <div id="qrcode"></div>
 
 
