removed redundant code

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Multiplayer Flappy Bird</title>
+    <title>Phaser Boilerplate Code</title>
     <style>
       body {
         padding: 200px;
@@ -10,8 +10,7 @@
     </style>
   </head>
   <body>
-    <div>Scan me to play! Use the 'A' key on your controller to play!</div>
-    <div id="qrcode"></div>
+    <!-- <div id="qrcode"></div> -->
 
 
   </body>
