added responsive screensize

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Phaser Boilerplate Code</title>
-    <style>
+    <!-- <style>
       body {
-        padding: 200px;
+        padding-left: 50px;
       }
-    </style>
+    </style> -->
   </head>
   <body>
-    <!-- <div id="qrcode"></div> -->
+    <div id="qrcode"></div>
 
 
   </body>
