changed browser title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Creating Map</title>
+    <title>Creating Tilemap</title>
     <!-- <style>
       body {
         padding-left: 50px;
