removed scrollable bar that appeared

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <style> body { margin: 0; } </style>
     <meta charset="utf-8">
     <title>Creating Tilemap</title>
     <!-- <style>
