nes controller working

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     </style> -->
   </head>
   <body>
-    <div id="qrcode"></div>
+    <div id="qrcode">
+      hello
+    </div>
+    
 
 
   </body>
