got qrcode overlapping with phaser canvas

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     </style> -->
   </head>
   <body>
-    <div id="qrcode">
-      hello
+    <div style="z-index: 1;position: absolute;" id="game">
+
     </div>
+    <div style="z-index: 2;position: absolute;width: 50;" id="qrcode"></div>
     
 
 
