added joystick instead of nes controller
contains bug where it cannot read the angle of the joystick and instead
gets null

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div style="z-index: 1;position: absolute;" id="game">
 
     </div>
-    <div style="z-index: 2;position: absolute;width: 50;" id="qrcode"></div>
+    <div style="z-index: 2;position: absolute;width: 50; margin-top: 10px; margin-left: 10px" id="qrcode"></div>
     
 
 
