added player class - fixed bug in webpack using externals

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <style> body { margin: 0; } </style>
     <meta charset="utf-8">
     <title>Creating Tilemap</title>
+    <script type="text/javascript" src="./src/helpers/player.js"></script>
     <!-- <style>
       body {
         padding-left: 50px;
