added bold text and more player ready functionality

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <style> body { margin: 0; } </style>
     <meta charset="utf-8">
-    <title>Creating Tilemap</title>
+    <title>Gotta Graduate!</title>
     <!-- <style>
       body {
         padding-left: 50px;
