--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div style="z-index: 1;position: absolute;" id="game">
-      <div style="z-index: 2;position: absolute;width: 50; margin-top: 10px; margin-left: 10px" id="qrcode"></div>
+      <div style="z-index: 2;position: absolute; margin-top: 10px; margin-left: 10px" id="qrcode"></div>
     </div>
   </body>
 </html>
