--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <style> body { margin: 0; } </style>
     <meta charset="utf-8">
     <title>Gotta Graduate!</title>
+    <link rel="icon" href="/assets/favicon.ico">
     <!-- <style>
       body {
         padding-left: 50px;
