moved favicon to root

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <style> body { margin: 0; } </style>
     <meta charset="utf-8">
     <title>Gotta Graduate!</title>
-    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <!-- <style>
       body {
         padding-left: 50px;
