Removed text generated with QR code

--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style> body { margin: 0; } </style>
-    <meta charset="utf-8">
+    <style>
+      body {
+        margin: 0;
+      }
+    </style>
+    <meta charset="utf-8" />
     <title>Gotta Graduate!</title>
-    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
     <!-- <style>
       body {
         padding-left: 50px;
@@ -12,8 +16,19 @@
     </style> -->
   </head>
   <body>
-    <div style="z-index: 1;position: absolute;" id="game">
-      <div style="z-index: 2;position: absolute; width:fit-content; height:fit-content;   margin-top: 10px; margin-left: 10px" id="qrcode"></div>
+    <div style="z-index: 1; position: absolute" id="game">
+      <div
+        style="
+          z-index: 2;
+          position: absolute;
+          width: fit-content;
+          height: fit-content;
+          margin-top: 10px;
+          margin-left: 10px;
+          color: transparent;
+        "
+        id="qrcode"
+      ></div>
     </div>
   </body>
 </html>
